fixed z-index issues, fixed blue triangle thing

--- a/css/main.css
+++ b/css/main.css
@@ -279,7 +279,6 @@ footer p {
     position: absolute;
     text-shadow: 0 1px 0 #000;
     white-space: nowrap;
-    z-index: 98;
 }
 
 .social-count:before {
@@ -293,7 +292,6 @@ footer p {
     display: block;
     left: 22px;
     position: absolute;
-    z-index: 99;
 }
 #socfooter a {
     float: left;
@@ -319,6 +317,29 @@ footer p {
 
 #privacy {
 	margin-top:50px;
+}
+
+#take-part {
+    background-image:none;
+}
+#take-part h2 {
+    background-color:#169dc3;
+    position:relative;
+    z-index: -1;
+    padding-bottom:20px;
+}
+#take-part h2:after {
+    background: url('/img/takepart.png') no-repeat;
+    background-size:auto 50px;
+    background-position: center;
+    display:block;
+    content:'';
+    width:100%;
+    height:50px;
+    position:absolute;
+    top:100%;
+    margin-top: -13px;
+    z-index:-2;
 }
 
 footer {
@@ -511,26 +532,5 @@ footer {
     	display:inline-block;
     	width: 90%;
     	margin-bottom:6px;
-    }
-    #take-part {
-        background-image:none;
-    }
-    #take-part h2 {
-        background-color:#169dc3;
-        position:relative;
-        padding-bottom:20px;
-    }
-    #take-part h2:after {
-        background: url('/img/takepart.png') no-repeat;
-        background-size:auto 50px;
-        background-position: center;
-        display:block;
-        content:'';
-        width:100%;
-        height:50px;
-        position:absolute;
-        top:100%;
-        margin-top: -13px;
-        z-index:-1;
     }
 }
